@@ -744,14 +744,25 @@ cb_ok_project(GtkWidget *widget, gpointer data)
     project_list_t *project_list = NULL, *tmp;
     int idx;
     
-    if (screen.win.project)
+    if (screen.win.project) {
 	filename = (char *)gtk_file_selection_get_filename(GTK_FILE_SELECTION(screen.win.project));
-    
+
+	/*
+	 * Remember where we loaded file from last time
+	 */
+	if (screen.path)
+	    free(screen.path);
+	screen.path = (char *)malloc(strlen(filename) + 1);
+	strcpy(screen.path, filename);
+	dirname(screen.path);
+	screen.path = strncat(screen.path, "/", 1);
+    }
+
     switch ((long)data) {
     case OPEN_PROJECT:
 	
 	project_list = read_project_file(filename);
-	
+
 	if (project_list) {
 	    load_project(project_list);
 	    /*
@@ -800,11 +811,8 @@ cb_ok_project(GtkWidget *widget, gpointer data)
 	    project_list->rgb[0] = screen.background->red;
 	    project_list->rgb[1] = screen.background->green;
 	    project_list->rgb[2] = screen.background->blue;
-/*  	    printf("[%d, %d,%d]\n", screen.background->red,  */
-/*  		   screen.background->green, screen.background->blue); */
 	    project_list->next = NULL;
 	}
-/*  	else printf("FOO\n"); */
 	
 	for (idx = 0; idx < MAX_FILES; idx++) {
 	    if (screen.file[idx] && screen.file[idx]->name) {
@@ -2652,6 +2660,16 @@ main(int argc, char *argv[])
 	    screen.project = (char *)malloc(strlen(project_filename) + 1);
 	    memset((void *)screen.project, 0, strlen(project_filename) + 1);
 	    strncpy(screen.project, project_filename, strlen(project_filename));
+	    /*
+	     * Remember where we loaded file from last time
+	     */
+	    if (screen.path)
+		free(screen.path);
+	    screen.path = (char *)malloc(strlen(project_filename) + 1);
+	    strcpy(screen.path, project_filename);
+	    dirname(screen.path);
+	    screen.path = strncat(screen.path, "/", 1);
+	    
             rename_main_window(screen.project, NULL);
 	} else {
 	    GERB_MESSAGE("Failed to load project\n");
