@@ -1,5 +1,7 @@
 2004-02-07  Stefan Petersen  <spe@stacken.kth.se>
 
+	* src/gerbv.c: Save screen.path even when we load a project file.
+
 	* src/gerbv.c: Fixed a segmentation fault when I tried to free
 	  an optarg:ed variable.
 
